--- a/package.json
+++ b/package.json
@@ -19,8 +19,22 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.1.3",
+    "angular-calendar": "^0.27.7",
+    "angularx-flatpickr": "^6.1.0",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "date-fns": "^1.30.1",
+    "flatpickr": "^4.5.7",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.4.1",
+    "ng-bootstrap": "^1.6.3",
+    "ng2-cookies": "^1.0.12",
+    "ngx-toastr": "^10.0.4",
+    "popper.js": "^1.15.0",
     "rxjs": "~6.3.3",
+    "rxjs-compat": "^6.5.2",
+    "socket.io-client": "^2.2.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
